# PixelArt_Maximisation

./: .gitignore  CMakeLists.txt  Enlarger.cpp  Enlarger.h  main.cpp
test-data/: license.txt
